# autovideo

./: .gitignore  AGENTS.md  CLAUDE.md  SETUP.md  components.json  jsrepo.json  package.json  plan.md  pnpm-lock.yaml  project.md  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ffmpeg.rs  lib.rs  llm.rs  main.rs  models.rs  pipeline.rs  transcribe.rs
src/lib/components/: ConfigPanel.svelte  DoneScreen.svelte  HomeScreen.svelte  ProcessingScreen.svelte  StageCard.svelte  TranscriptViewer.svelte
src/lib/components/editor/: EditorScreen.svelte  TranscriptEditor.svelte  VideoPreview.svelte  Word.svelte
src/lib/stores/: editor.ts  pipeline.ts
src/lib/types/: pipeline.ts  ui.ts
src/lib/utils/: tauri.ts
src/routes/: +page.svelte
